# durov

./: .gitignore  Cargo.toml  LAYER.md  README.md
durov-client/: Cargo.toml
durov-client/examples/: bot.rs  files.rs  userbot.rs
durov-client/src/: client.rs  config.rs  datacenters.rs  encrypted.rs  error.rs  lib.rs  manager.rs  plain.rs  sessions.rs  srp.rs
durov-client/src/client/: auth.rs  connect.rs  files.rs  peers.rs  resolve.rs  rpc.rs  updates.rs
durov-client/src/client/files/: download.rs  upload.rs
durov-client/src/client/files/download/: data.rs  extend.rs  work.rs
durov-client/src/client/files/upload/: data.rs  work.rs
durov-client/src/client/peers/: encoding.rs
durov-client/src/client/updates/: action.rs  convert.rs  peers.rs  pts.rs  queue.rs  updater.rs
durov-client/src/encrypted/: ack.rs  salt.rs  worker.rs
durov-client/src/encrypted/salt/: item.rs
durov-client/src/error/: placeholder.rs
durov-client/src/sessions/: auth.rs  encoding.rs  peer.rs  telethon.rs
durov-crypto/: Cargo.toml
durov-crypto/src/: auth.rs  encrypted.rs  hashes.rs  lib.rs  modular.rs  prime_g.rs  primes.rs  primitives.rs  random.rs  safety.rs  serde.rs  srp.rs  utils.rs
durov-crypto/src/auth/: internals.rs
durov-crypto/src/primitives/: ciphers.rs  safety.rs  serde.rs
durov-mtclient/: Cargo.toml
durov-mtclient/src/: config.rs  encrypted.rs  lib.rs  plain.rs  proxy.rs  tcp.rs
durov-mtclient/src/encrypted/: ack.rs  complications.rs  helpers.rs  pool.rs  protocol.rs  receiver.rs  request.rs  salt.rs  sender.rs  timed.rs  worker.rs
durov-mtclient/src/encrypted/ack/: item.rs
durov-mtclient/src/encrypted/pool/: item.rs
durov-mtproto/: Cargo.toml
durov-mtproto/src/: auth.rs  connection.rs  crypto.rs  datacenter.rs  lib.rs  log.rs  protocols.rs  tracing.rs  transports.rs
durov-mtproto/src/crypto/: hashes.rs  logic.rs  modular.rs  primes.rs  utils.rs
durov-mtproto/src/protocols/: check.rs  checkers.rs  constants.rs  encrypted.rs  msg_id.rs  plain.rs  serde.rs  serialize.rs  time.rs
durov-mtproto/src/protocols/encrypted/: gzip.rs  object.rs  unpack.rs
durov-mtproto/src/transports/: full.rs
durov-tl-gen/: Cargo.toml
durov-tl-gen/src/: combinator.rs  context.rs  data_type.rs  lib.rs  name.rs  namespace.rs  type_info.rs  write.rs  writer.rs
durov-tl-parser/: Cargo.toml
durov-tl-parser/src/: check.rs  lib.rs  recursion.rs  tree.rs
durov-tl-types/: Cargo.toml  build.rs
durov-tl-types/schemas/: api.tl  mtproto.tl
durov-tl-types/src/: buffer.rs  constants.rs  cursor.rs  deserialize.rs  lib.rs  schemas.rs  serialize.rs  utils.rs
durov-tl-types/src/buffer/: array.rs
