[package]
name = "durov-client"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
durov-mtclient = { path = "../durov-mtclient" }
durov-mtproto = { path = "../durov-mtproto" }
durov-tl-types = { path = "../durov-tl-types" }
durov-crypto = { path = "../durov-crypto" }
crypto-bigint = { version = "0.7", features = ["alloc"] }
pbkdf2 = "0.13"
sha2 = "0.11"
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
env_logger = "0.11"

[features]
fast-buf = ["durov-mtclient/fast-buf"]
