[package]
name = "durov-client"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
durov-mtclient = { path = "../durov-mtclient" }
durov-mtproto = { path = "../durov-mtproto" }
durov-tl-types = { path = "../durov-tl-types" }
durov-crypto = { path = "../durov-crypto" }
crypto-bigint = { version = "0.7", features = ["alloc"] }
pbkdf2 = "0.13"
sha2 = "0.11"
async-trait = "0.1"
tracing = "0.1"

sqlx = { version = "0.8", features = ["runtime-tokio"], optional = true }

[dev-dependencies]
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
session-telethon = ["sqlx/sqlite"]
