[package]
name = "durov-client"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
durov-mtclient = { path = "../durov-mtclient" }
durov-mtproto = { path = "../durov-mtproto" }
durov-crypto = { path = "../durov-crypto" }
durov-tl-types = { path = "../durov-tl-types" }
sqlx = { version = "0.9", features = ["runtime-tokio"] }
dialoguer = "0.12"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"

[dev-dependencies]
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
session-telethon = ["sqlx/sqlite"]
