[package]
name = "durov-crypto"
edition = "2024"

[dependencies]
thiserror = "2"
durov-tl-types = { path = "../durov-tl-types" }
rand = "=0.10.0-rc.7"
crypto-bigint = { version = "=0.7.0-rc.21", features = ["alloc"] }
crypto-primes = "=0.7.0-pre.7"
crc-fast = "1"
sha2 = "=0.11.0-rc.3"
sha1 = "=0.11.0-rc.3"
aes = "=0.9.0-rc.2"
ige = "=0.2.0-rc.2"
