[package]
name = "durov-mtclient"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["rt", "io-util", "net", "time", "macros"] }
flume = "0.12"
durov-mtproto = { path = "../durov-mtproto" }
durov-tl-types = { path = "../durov-tl-types" }
rand = "0.10"
log = "0.4"

[features]
fast-buf = ["durov-mtproto/fast-buf"]
