[package]
name = "durov-mtclient"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["rt", "io-util", "net", "time", "macros"] }
flume = "0.12"
fast-socks5 = "1"
durov-mtproto = { path = "../durov-mtproto" }
durov-tl-types = { path = "../durov-tl-types" }
rand = "0.10"
bytes = "1"
tracing = "0.1"
