[package]
name = "durov-mtclient"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["rt", "io-util", "net", "time", "macros"] }
durov-mtproto = { path = "../durov-mtproto" }
durov-crypto = { path = "../durov-crypto" }
durov-tl-types = { path = "../durov-tl-types" }
flume = "0.12"
rand = "0.10"
bytes = "1"
parking_lot = "0.12"
fast-socks5 = "1"
tracing = "0.1"
