[package]
name = "durov-mtproto"
edition = "2024"

[dependencies]
thiserror = "2"
durov-crypto = { path = "../durov-crypto" }
durov-tl-types = { path = "../durov-tl-types" }
rand = "0.10"
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
parking_lot = "0.12"
tracing = "0.1"
